Fix the vertical alignment of the Table of Contents on the CLI archive

--- a/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
+++ b/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
@@ -3,7 +3,8 @@
  * templates or theme.json settings.
  */
 
-body.handbook-landing-page {
+body.handbook-landing-page,
+body.post-type-archive-command {
 	--wp--custom--wporg-sidebar-container--spacing--margin--top: 100px;
 }
 
